--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "server.js", "use": "@now/node-server" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/server.js" }
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/api"
+        }
     ]
-  }
-  
+}
