--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "vercel-build":"echo hello"
+    "vercel-build": "echo hello"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^3.5.3",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
